syntax = "proto3";


option go_package = "pickrewardapi/api/channel/proto";
// option java_multiple_files = true;
// option java_package = "io.grpc.examples.helloworld";
// option java_outer_classname = "HelloWorldProto";

package channel.v1;

// The greeting service definition.
service ChannelV1 {

  rpc GetChannelTypes (EmptyReq) returns (ChannelTypesReply){}
  rpc GetChannelsByType (ChannelTypeReq) returns (ChannelsReply){}
  rpc GetsByChannelIDs(ChannelIDsReq) returns(ChannelsReply) {}
  rpc SearchChannel(SearchChannelReq) returns (SearchChannelsReply) {}
}

message EmptyReq{}

message Reply {
  int32 status = 1;
  Error error = 2;
}


message Error {
  int32 errorCode = 1;
  string errorMessage = 2;
}


message ChannelIDsReq{
  repeated string channelIDs = 1;
}

message ChannelTypeReq {
  int32 ctype = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message ChannelTypesReply{

  message ChannelType {
    int32 channelType = 1;
    string name = 2;
    int32 order = 3;
  }
  
  Reply reply = 1;
  repeated ChannelType channelTypes = 2;

}


message ChannelsReply {


  message Channel{
    string id = 1;
    string name = 2;
    string linkURL = 3;
    int32 channelType = 4;
    int64 createDate = 5;
    int64 updateDate = 6;
    repeated int32 channelLabels = 7;
    int32 order = 8;
    int32 channelStatus = 9;
  }


  Reply reply = 1;
  repeated Channel channels = 2;
}




message SearchChannelReq{
  string keyword = 1;
}

message SearchChannelsReply{

 
  message Channel{
    string id = 1;
    string name = 2;
    string linkURL = 3;
    int32 channelType = 4;
    int64 createDate = 5;
    int64 updateDate = 6;
    repeated int32 channelLabels = 7;
    int32 order = 8;
    int32 channelStatus = 9;
  }

  Reply reply = 1;
  repeated Channel channels = 2;
}


